[gd_scene load_steps=2 format=2]

[ext_resource path="res://Player/Bullet_Time.gd" type="Script" id=1]

[node name="Bullet_Time" type="Node2D"]
script = ExtResource( 1 )

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.04

[node name="CD" type="Timer" parent="."]

[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_GhostTimer_timeout"]
[connection signal="timeout" from="CD" to="." method="_on_CD_timeout"]
